--- a/css/bear.css
+++ b/css/bear.css
@@ -8,5 +8,10 @@ html {
   right: 0;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: lightblue;
+    }
+}
 /* Write your solution here */
 
