--- a/css/bear.css
+++ b/css/bear.css
@@ -8,7 +8,7 @@ html {
   right: 0;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 1196px) {
     body {
         background-color: lightblue;
     }
