--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -11,9 +11,9 @@ html {
 /* Write your solution here */
 
 @media only screen and (min-width: 1196px) {
-  #bear {
+  #ostrich {
     position: absolute;
-    top: 100px;
-    right: 0px;
+    top: 50px;
+    right: 0;
   }
 }
