--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -10,10 +10,10 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (min-width: 1196px) {
+@media only screen and (max-width: 1196px) {
   #ostrich {
     position: absolute;
-    top: 50px;
+    top: 150px;
     right: 0;
   }
 }
