--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,10 +10,10 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (min-width: 1196px) {
-  #bear {
+@media only screen and (min-width: 406px) and (max-width: 1170px) {
+  #monkey {
     position: absolute;
-    top: 100px;
-    right: 800px;
+    top: 550px;
+    right: 120px;
   }
 }
