--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -22,6 +22,7 @@ html {
 
 @media only screen and (min-width: 642px) and (max-width: 1090px) {
   #dolphin {
+    transform: rotate(20deg);
     position: absolute;
     top: 400px;
     right: 0;
