--- a/css/bear.css
+++ b/css/bear.css
@@ -8,5 +8,12 @@ html {
   right: 0;
 }
 
+@media only screen and (min-width: 1196px) {
+  #bear {
+    position: absolute;
+    top: 100px;
+    right: 800px;
+  }
+}
 /* Write your solution here */
 
